--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-native-launch-screen",
+  "name": "rn-launch-screen",
   "title": "React Native Launch Screen",
   "version": "1.0.0",
   "description": "TODO",
